sart portfolio and css

--- a/style.css
+++ b/style.css
@@ -4,3 +4,24 @@
         height: 2346px;
         background: #FFFFFF;
 }
+.header{
+    position: absolute;
+width: 1600px;
+height: 80px;
+}
+
+.header-logo{
+position: absolute;
+width: 145px;
+height: 31px;
+left: 215px;
+top: 24px;
+}
+
+.header-studio{
+
+}
+
+.header-web{
+
+}
