--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .body{
     position: relative;
-        width: 1600px;
-        height: 2346px;
-        background: #FFFFFF;
+    width: 1600px;
+    height: auto;
+    background: #FFFFFF;
 }
 .header{
     position: absolute;
@@ -19,9 +19,95 @@ top: 24px;
 }
 
 .header-studio{
-
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+letter-spacing: 0.03em;
+color: #000000;
 }
 
 .header-web{
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+letter-spacing: 0.03em;
+color: #2196F3;
+}
+.header-navigation{
+position: absolute;
+width: 281px;
+height: 16px;
+left: 453px;
+top: 32px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+
+text-decoration-line: none;
+
+}
+.header-mail{
+    position: absolute;
+    width: 135px;
+    height: 16px;
+    left: 1078px;
+    top: 32px;
+}
+
+.header-tel{
+    position: absolute;
+    width: 122px;
+    height: 16px;
+    left: 1263px;
+    top: 32px;
+    
+}
+
+.main{
+    position: absolute;
+    width: 1600px;
+    height: 600px;
+    left: 0px;
+    top: 80px;
+}
+
+.skill{
+position: absolute;
+width: 1170px;
+height: 98px;
+left: 215px;
+top: 774px;
+}
+
+.work{
+position: absolute;
+width: 1170px;
+height: 386px;
+left: 215px;
+top: 966px;
+}
+
+.team{
+position: absolute;
+width: 1600px;
+height: 648px;
+left: 0px;
+top: 1446px;
+}
+
+.footer{
+position: absolute;
+width: 1600px;
+height: 252px;
+left: 0px;
+top: 2094px;
 
 }
