index-portfolio-css-02--31/10/22

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ color: var(--color-change);
 
 
 /*----------HEROY---------*/ 
-.main{
+.single-file{
 width: 1600px;
 height:250px;
 background-color:var(--color-bckg);
