--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 --color-main:#757575;
 --color-footer-mail:rgba(255, 255, 255, 0.6);
 --color-filter:#F5F4FA;
+--color-change-butt:#188CE8;
 
 --line-nav:1.14;
 --line-title:1.568;
@@ -24,7 +25,7 @@
 
 
 /*----------BODY---------*/ 
-.body{
+body{
 font-family:"Roboto", sans-serif;
 font-weight: 400;
 font-size:16px;
@@ -62,23 +63,25 @@ color:var(--color-change);
 }
 
 .header-navigation{
-    font-weight: var(--font-weig);
-    font-size: 14px;
-    line-height:var(--line-nav);
-    letter-spacing: 0.02em;
-    
+font-weight: var(--font-weig);
+font-size: 14px;
+line-height:var(--line-nav);
+letter-spacing: 0.02em;
+
 }
 
 .header-list{
-    list-style: none;
-    color: var(--color-link);
+list-style: none;
+color: var(--color-link);
 }
-.link{
-    text-decoration:none;
+.header-list a{
+color:var(--color-link);
 }
+.link{text-decoration:none;}
+
 .link:hover,
 .link:focus{
-    color:var(--color-change);
+color:var(--color-change);
 }
 
 .contact-tel{
@@ -117,6 +120,10 @@ background-color:var(--color-change);
 color: var(--color-white);
 cursor: pointer;
 }
+.main-button:hover,
+.main-button:focus{
+background-color:var(--color-change-butt);
+}
 
 /*----------SKILLS---------*/ 
 
@@ -128,7 +135,7 @@ cursor: pointer;
 .skill-list
 {list-style: none;}
 
-.skill-list,h3{
+.skill-title{
 font-weight:var(--font-weig-b);
 font-size: 14px;
 line-height:var(--line-nav);
@@ -147,13 +154,14 @@ color:var(--color-main);
 
 .work{}
 
-.work-title{
+.title{
 font-weight:var(--font-weig-b);
 font-size: 36px;
 line-height: 1.166;
 text-align: center;
 color:var(--color-link);
 }
+
 .work-image
 {list-style: none;}
 
@@ -162,27 +170,20 @@ color:var(--color-link);
 .team{
 background-color: #F5F4FA;
 }
-
-.team-title{
-font-weight:var(--font-weig-b);
-font-size: 36px;
-line-height: 1.166;
-text-align: center;
-color: var(--color-link);
-
-}
 .team-cards{}
 .team-list
 {list-style: none;}
 
-.team-list,h3{
+.team-title{
 font-family:var(--font-weig);
 line-height: 1.187;
 color:var(--color-link);
 }
-.team-list,p{
-line-height: 1.187;
+.team-text{
+font-size: 16px;
+line-height:1.1718;
 }
+
 
 /*----------FOOTER---------*/ 
 
@@ -223,8 +224,11 @@ color:var(--color-white);
 list-style: none;
 }
 .footer-mail{
-list-style: none;
+text-decoration: none;
 color:var(--color-footer-mail);
+font-size: 14px;
+line-height: 1.714;
+
 }
 .footer-mail:hover,
 .footer-tel:focus{
@@ -248,10 +252,16 @@ line-height:1.625;
 text-align: center;
 letter-spacing: 0.03em;
 color:var(--color-link);
+cursor: pointer;
+
 }
 .portfolio-button:hover,
 .portfolio-button:focus{
 background-color:var(--color-change);
+}
+.portfolio-button:hover,
+.portfolio-button:focus{
+color: var(--color-white);
 }
 
 .portfolio-image
