index-portfolio-css-05-1/11/22

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ font-weight: 900;
 font-size: 44px;
 line-height: 1.33;
 color:var(--color-white);
+text-transform: uppercase;
 }
 
 .main-button{
